cluster/nexus3/nexus3-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus3
spec:
  finalizers:
  - kubernetes
