cluster/nexus3/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nexus3
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: nexus3
    app.kubernetes.io/component: nexus3
    app.kubernetes.io/instance: nexus3
  name: nexus3
spec:
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    deployment: nexus3
